--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <div class="container">
-        <div class="item"></div>
+        <div class="item">
+            <span class="fs-small">14</span>
+            <span class="fs-medium">16</span>
+            <span class="fs-large">18</span>
+        </div>
     </div>
+
 </body>
 </html>
