Nesting at-root

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <span class="fs-large">18</span>
         </div>
     </div>
-
+    <div class="list">
+        <li></li>
+    </div>
+    <div class="box"></div>
 </body>
 </html>
