--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li></li>
     </div>
     <div class="box"></div>
+    <div class="box1"></div>
     <div class="item"></div>
 </body>
 </html>
