--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </div>
     <div class="box"></div>
     <div class="box1"></div>
+    <div class="box2"></div>
     <div class="item"></div>
 </body>
 </html>
